--- a/includes/footer.pug
+++ b/includes/footer.pug
@@ -1,4 +1,4 @@
-script(src='js/vendor/jquery.min.js')
+script(src='js/vendor/jquery.js')
 script(src='js/vendorwhat-input.min.js')
 script(src='js/foundation.min.js')
 script=(src='js/app.js')
