--- a/sass/style.scss
+++ b/sass/style.scss
@@ -74,6 +74,67 @@ ul#main-menu li#hire {
   background: #cb5f5f;
 }
 
-menu li a:hover {
+ul#menu li a:hover {
   background: $sidebar-hover-color;
+}
+
+ul#sociall-menu li {
+  display:inline;
+  float:left;
+  width:33%;
+  text-align:center;
+}
+
+content {
+  background: #fff url(../images/bg.jpg) no-repeat;
+  min-height:600px;
+  border-radius: 0px 7px 0px 0px;
+}
+
+h1 {
+  color: #fff;
+  text-align: center;
+  font-eight: 300;
+  font-size: 2.8em;
+  margin-top: 60px;
+}
+
+h2 {
+  text-transform: uppercase;
+  margin-top: 140px;
+}
+
+.skill-icons {
+  margin: 20px 0 40px 0;
+}
+
+ul.skills {
+  margin-bottom: 100px;
+}
+
+ul.skills li {
+  font-weight: bold;
+  color: #463a4c;
+}
+
+@media only screen and (max-width: 40em) {
+  #left-bar {
+    padding-bottom: 20px;
+  }
+
+  ul#main-menu, ul.skills {
+    margin:20px 0;
+  }
+
+  ul#social-menu {
+    padding-bottom: 30px;
+  }
+
+  #content {
+    text-align: center;
+  }
+
+  h2 {
+    margin-top: 40px;
+  }
 }
