--- a/pug/index.pug
+++ b/pug/index.pug
@@ -20,14 +20,14 @@ html.no-js
         .medium-6.columns
           
           +skillinfo('Frontend', "ive been doing frontend for 15  years",
-          'images/frontend-icons.png')
+          'images/devlogos.png')
         
           +skills('Html5', 'css3', 'css3', 'xml', 'javascript')
         
         .medium-6.columns
            
           +skillinfo('Backend', "ive been doing frontend for 15  years",
-           'images/backend-icons.png')
+           'images/devlogos.png')
          
           +skills('node', 'python', 'java', 'xml', 'nosql')
          
